--- a/app/index.html
+++ b/app/index.html
@@ -28,27 +28,31 @@
     <![endif]-->
 
 	<div class="hero-unit">
+
 		<form method="get">
 			<fieldset>
 				<ul>
 					<li>
 						<label for="latitude">Latitude</label>
-						<input type="text" id="latitude" placeholder="e.g. 42.9150747" required>
+						<input type="text" id="latitude" placeholder="e.g. 51.5074" required>
 					</li>
  
 					<li>
 						<label for="longitude">Longitude</label>
-						<input type="text" id="longitude" placeholder="e.g. -77.784323" required>
+						<input type="text" id="longitude" placeholder="e.g. 0.1278" required>
+					</li>
+
+					<li>
+						<label for="city-search">City name</label>
+						<input type="text" id="city-search" placeholder="e.g. London">
 					</li>
 				</ul>
 			</fieldset>
  
 			<button>Get Weather</button>
 		</form>
+
 	</div> <!-- end .hero-unit -->
-
-
-
 
 
 
@@ -65,6 +69,9 @@
 		r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
 		ga('create','UA-XXXXX-X');ga('send','pageview');
 	</script>
+
+	<!-- Google Maps API -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWktdseK1qF2sRLJsbDA7HNIadvjv6XzA&libraries=places,geometry"></script>
 
 	<!-- build:js scripts/vendor.js -->
 	<!-- bower:js -->
