use navigator.geolocation API to locate user's device

--- a/app/index.html
+++ b/app/index.html
@@ -29,29 +29,18 @@
 
 	<div class="hero-unit">
 
-		<form method="get">
+		<div class="header">
+			<div id="userLocation"></div>
+			<h6>DD/MM/YY hh:mm:ss</h6>
+		</div>
+		
+		<div class="temp-data">
+			
+		</div>
 
-			<fieldset>
-				<ul>
-					<li>
-						<label for="latitude">Latitude</label>
-						<input type="text" id="latitude" placeholder="e.g. 51.5074" required>
-					</li>
- 
-					<li>
-						<label for="longitude">Longitude</label>
-						<input type="text" id="longitude" placeholder="e.g. 0.1278" required>
-					</li>
-
-					<li>
-						<label for="city-search">City name</label>
-						<input type="text" id="city-search" placeholder="e.g. London">
-					</li>
-				</ul>
-			</fieldset>
- 
-			<button>Get Weather</button>
-		</form>
+		<div class="details">
+			
+		</div>
 
 	</div> <!-- end .hero-unit -->
 
@@ -61,18 +50,9 @@
 
 	
 
-	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-	<script>
-	// (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-	// 	function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-	// 	e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-	// 	e.src='https://www.google-analytics.com/analytics.js';
-	// 	r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-	// 	ga('create','UA-XXXXX-X');ga('send','pageview');
-	</script>
 
-	<!-- Google Maps API -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6KWAhE99_kuswbaHpQ8UUfLErnTeM65s&libraries=places,geometry"></script>
+
+
 
 	<!-- build:js scripts/vendor.js -->
 	<!-- bower:js -->
