--- a/app/index.html
+++ b/app/index.html
@@ -34,11 +34,11 @@
 			<h6>DD/MM/YY hh:mm:ss</h6>
 		</div>
 		
-		<div class="temp-data">
+		<div id="temp-data">
 			
 		</div>
 
-		<div class="details">
+		<div id="details">
 			
 		</div>
 
